started applying encryption to classes

--- a/SpendingTracker/nbproject/project.properties
+++ b/SpendingTracker/nbproject/project.properties
@@ -82,7 +82,8 @@ javac.classpath=\
     ${file.reference.orsoncharts-1.4-eval-nofx.jar-1}:\
     ${file.reference.orsonpdf-1.6-eval.jar-1}:\
     ${file.reference.servlet.jar-1}:\
-    ${file.reference.swtgraphics2d.jar-1}
+    ${file.reference.swtgraphics2d.jar-1}:\
+    ${libs.JFreeChart.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -95,7 +96,8 @@ javac.source=13
 javac.target=13
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.JFreeChart.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
